<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgDeep"
    android:orientation="vertical"
    tools:context=".option.PasswordActivity">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/bgLight"
        android:textSize="@dimen/textLarge"
        android:background="@color/themeColor"/>
    
    <include
        android:id="@+id/enable"
        layout="@layout/layout_enable"/>
    
    <LinearLayout
        android:id="@+id/passwdLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:orientation="vertical"
        android:background="@drawable/bg_fill"
        android:visibility="gone"
        tools:visibility="visible">
        
        <!-- 输入旧密码. -->
        <TextView
            android:id="@+id/titleOld"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oldPasswdTitle"
            android:textSize="@dimen/textSmall"
            android:textColor="@color/themeColor"
            android:visibility="gone"
            tools:visibility="visible"/>
        
        <EditText
            android:id="@+id/oldPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:inputType="textPassword"
            android:hint="@string/oldPasswdHint"
            android:textColorHint="@color/hintColor"
            android:autofillHints="@null"
            android:textColor="@color/commonText"
            android:textSize="@dimen/textMedium"
            android:theme="@style/CursorStyle"
            android:background="@null"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="---"/>
    
        <!-- 输入新密码或设置密码. -->
        <TextView
            android:id="@+id/titleNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/newPasswdTitle"
            android:textSize="@dimen/textSmall"
            android:textColor="@color/themeColor"/>
    
        <EditText
            android:id="@+id/newPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:hint="@null"
            tools:hint="@string/newPasswdHint"
            android:textColorHint="@color/hintColor"
            android:autofillHints="@null"
            android:textColor="@color/commonText"
            android:textSize="@dimen/textMedium"
            android:theme="@style/CursorStyle"
            android:background="@null"
            tools:text="---"/>
    
        <EditText
            android:id="@+id/confirmPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/confirmPasswdHint"
            android:textColorHint="@color/hintColor"
            android:autofillHints="@null"
            android:textColor="@color/commonText"
            android:textSize="@dimen/textMedium"
            android:theme="@style/CursorStyle"
            android:background="@null"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="---"/>
        
        <!-- 确认或修改. -->
        <Button
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:text="@string/alterButton"
            android:textSize="@dimen/textMedium"
            android:textColor="@color/bgLight"
            android:background="@drawable/bg_common_button"
            style="?android:attr/borderlessButtonStyle"/>
        
    </LinearLayout>

</LinearLayout>