<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgDeep"
    tools:context=".SafetyOptionActivity">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/bgLight"
        android:textSize="@dimen/textLarge"
        android:background="@color/themeColor"/>
    
    <com.mingz.share.ui.DrawableTextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:gravity="center_vertical"
        android:text="@string/password"
        android:textSize="@dimen/textAboveM"
        android:textColor="@color/commonText"
        app:drawableTint="@color/commonText"
        android:drawableEnd="@drawable/ic_arrow"
        app:drawableEndWidth="@dimen/iconMedium"
        app:drawableEndHeight="@dimen/iconMedium"
        android:drawableStart="@drawable/ic_password"
        app:drawableStartWidth="@dimen/iconSmall"
        app:drawableStartHeight="@dimen/iconSmall"
        android:drawablePadding="5dp"
        android:background="@drawable/bg_stroke_and_fill"/>
    
    <com.mingz.share.ui.DrawableTextView
        android:id="@+id/pattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:gravity="center_vertical"
        android:text="@string/pattern"
        android:textSize="@dimen/textAboveM"
        android:textColor="@color/commonText"
        app:drawableTint="@color/commonText"
        android:drawableEnd="@drawable/ic_arrow"
        app:drawableEndWidth="@dimen/iconMedium"
        app:drawableEndHeight="@dimen/iconMedium"
        android:drawableStart="@drawable/ic_pattern"
        app:drawableStartWidth="@dimen/iconSmall"
        app:drawableStartHeight="@dimen/iconSmall"
        android:drawablePadding="5dp"
        android:background="@drawable/bg_stroke_and_fill"/>
    
    <com.mingz.share.ui.DrawableTextView
        android:id="@+id/fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:gravity="center_vertical"
        android:text="@string/fingerprint"
        android:textSize="@dimen/textAboveM"
        android:textColor="@color/commonText"
        app:drawableTint="@color/commonText"
        android:drawableEnd="@drawable/ic_arrow"
        app:drawableEndWidth="@dimen/iconMedium"
        app:drawableEndHeight="@dimen/iconMedium"
        android:drawableStart="@drawable/ic_fingerprint"
        app:drawableStartWidth="@dimen/iconSmall"
        app:drawableStartHeight="@dimen/iconSmall"
        android:drawablePadding="5dp"
        android:background="@drawable/bg_stroke_and_fill"
        android:visibility="gone"
        tools:visibility="visible"/>

</LinearLayout>